# lioren-python

./: LICENSE  README.md  pyproject.toml
lioren/: core.py  documentos.py  folios.py  miscelaneo.py  schemas.py
src/: config.py  core.py  documentos.py  folios.py  miscelaneo.py  schemas.py
