[tool.poetry]
name = "lioren-python"
version = "0.1.0"
description = "Python client for Lioren's API"
authors = ["pepegc <jpgarcia90@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {extras = ["email"], version = "^1.9.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
